--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -112,44 +112,6 @@
               </div>
             </div> 
 
-            {foreach from=$timings  item=$timing}
-              {if ($timing.day == 'monday')}
-                {$mon_start_time = $timing.opening_time}
-                {$mon_end_time = $timing.closing_time}
-                {$mon_holiday = $timing.holiday}
-              {/if}
-              {if ($timing.day == 'tuesday')}
-                {$tue_start_time = $timing.opening_time}
-                {$tue_end_time = $timing.closing_time}
-                {$tue_holiday = $timing.holiday}
-              {/if}
-              {if ($timing.day == 'wednesday')}
-                {$wed_start_time = $timing.opening_time}
-                {$wed_end_time = $timing.closing_time}
-                {$wed_holiday = $timing.holiday}
-              {/if}
-              {if ($timing.day == 'thursday')}
-                {$thur_start_time = $timing.opening_time}
-                {$thur_end_time = $timing.closing_time}
-                {$thur_holiday = $timing.holiday}
-              {/if}
-              {if ($timing.day == 'friday')}
-                {$fri_start_time = $timing.opening_time}
-                {$fri_end_time = $timing.closing_time}
-                {$fri_holiday = $timing.holiday}
-              {/if}
-              {if ($timing.day == 'saturday')}
-                {$sat_start_time = $timing.opening_time}
-                {$sat_end_time = $timing.closing_time}
-                {$sat_holiday = $timing.holiday}
-              {/if}
-              {if ($timing.day == 'sunday')}
-                {$sun_start_time = $timing.opening_time}
-                {$sun_end_time = $timing.closing_time}
-                {$sun_holiday = $timing.holiday}
-              {/if}
-            {/foreach}
-
             <div class="row mb20">
               <div class="col-sm-12">
                 <label for="Time">Opening Times</label>
@@ -172,7 +134,7 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" {if ($mon_holiday == '1')}checked{/if} class="form-control" name="holiday[0]" value="1" style= "width:20px">
+                        <input type="checkbox" class="form-control" name="holiday[0]" value="1" style= "width:20px">
                       </td> 
                       <td style= "width:200px">Holiday</td>                   
                   </tr>
@@ -194,7 +156,7 @@
                         </div>
                       </td>  
                       <td>
-                        <input type="checkbox" {if ($tue_holiday == '1')}checked{/if} class="form-control" name="holiday[1]" value="1" style= "width:20px">
+                        <input type="checkbox" class="form-control" name="holiday[1]" value="1" style= "width:20px">
                       </td> 
                       <td style= "width:200px">Holiday</td>  
                   </tr>
@@ -216,7 +178,7 @@
                         </div>
                       </td>  
                       <td>
-                        <input type="checkbox" {if ($wed_holiday == '1')}checked{/if} class="form-control" name="holiday[2]" value="1" style= "width:20px">
+                        <input type="checkbox" class="form-control" name="holiday[2]" value="1" style= "width:20px">
                       </td> 
                       <td style= "width:200px">Holiday</td>                     
                   </tr>
@@ -238,7 +200,7 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" {if ($thur_holiday == '1')}checked{/if} class="form-control" name="holiday[3]" value="1" style= "width:20px">
+                        <input type="checkbox" class="form-control" name="holiday[3]" value="1" style= "width:20px">
                       </td> 
                       <td style= "width:200px">Holiday</td>                      
                   </tr>
@@ -260,7 +222,7 @@
                         </div>
                       </td>                        
                       <td>
-                        <input type="checkbox" {if ($fri_holiday == '1')}checked{/if} class="form-control" name="holiday[4]" value="1" style= "width:20px">
+                        <input type="checkbox" class="form-control" name="holiday[4]" value="1" style= "width:20px">
                       </td> 
                       <td style= "width:200px">Holiday</td> 
                   </tr>
@@ -282,7 +244,7 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" {if ($sat_holiday == '1')}checked{/if} class="form-control" name="holiday[5]" value="1" style= "width:20px">
+                        <input type="checkbox" class="form-control" name="holiday[5]" value="1" style= "width:20px">
                       </td> 
                       <td style= "width:200px">Holiday</td>                        
                   </tr>
@@ -304,7 +266,7 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" {if ($sun_holiday == '1')}checked{/if} class="form-control" name="holiday[6]" value="1" style= "width:20px">
+                        <input type="checkbox" class="form-control" name="holiday[6]" value="1" style= "width:20px">
                       </td> 
                       <td style= "width:200px">Holiday</td>                        
                   </tr>
