user profile/artist profile openning times

--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -12,7 +12,7 @@
             
             <div class="row">              
               <div class="col-sm-6">
-                <label for="first_name">First Name</label>
+                <label for="first_name">First Name user</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-user"></i></span>
                   <input name="first_name" id="first_name" class="form-control" value="{$scope.profile.first_name}" type="text" required/>
@@ -112,6 +112,44 @@
               </div>
             </div> 
 
+            {foreach from=$timings  item=$timing}
+              {if ($timing.day == 'monday')}
+                {$mon_start_time = $timing.opening_time}
+                {$mon_end_time = $timing.closing_time}
+                {$mon_holiday = $timing.holiday}
+              {/if}
+              {if ($timing.day == 'tuesday')}
+                {$tue_start_time = $timing.opening_time}
+                {$tue_end_time = $timing.closing_time}
+                {$tue_holiday = $timing.holiday}
+              {/if}
+              {if ($timing.day == 'wednesday')}
+                {$wed_start_time = $timing.opening_time}
+                {$wed_end_time = $timing.closing_time}
+                {$wed_holiday = $timing.holiday}
+              {/if}
+              {if ($timing.day == 'thursday')}
+                {$thur_start_time = $timing.opening_time}
+                {$thur_end_time = $timing.closing_time}
+                {$thur_holiday = $timing.holiday}
+              {/if}
+              {if ($timing.day == 'friday')}
+                {$fri_start_time = $timing.opening_time}
+                {$fri_end_time = $timing.closing_time}
+                {$fri_holiday = $timing.holiday}
+              {/if}
+              {if ($timing.day == 'saturday')}
+                {$sat_start_time = $timing.opening_time}
+                {$sat_end_time = $timing.closing_time}
+                {$sat_holiday = $timing.holiday}
+              {/if}
+              {if ($timing.day == 'sunday')}
+                {$sun_start_time = $timing.opening_time}
+                {$sun_end_time = $timing.closing_time}
+                {$sun_holiday = $timing.holiday}
+              {/if}
+            {/foreach}  
+
             <div class="row mb20">
               <div class="col-sm-12">
                 <label for="Time">Opening Times</label>
@@ -134,9 +172,9 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" class="form-control" name="holiday[0]" value="1" style= "width:20px">
+                        <input type="checkbox" {if ($mon_holiday == '1')}checked{/if} class="form-control" name="holiday[0]" value="1" style= "width:20px">
                       </td> 
-                      <td style= "width:200px">Holiday</td>                   
+                      <td style= "width:200px">Closed</td>                   
                   </tr>
                   <tr style="height: 15px;"/>
                   <tr>
@@ -156,9 +194,9 @@
                         </div>
                       </td>  
                       <td>
-                        <input type="checkbox" class="form-control" name="holiday[1]" value="1" style= "width:20px">
+                        <input type="checkbox" {if ($tue_holiday == '1')}checked{/if} class="form-control" name="holiday[1]" value="1" style= "width:20px">
                       </td> 
-                      <td style= "width:200px">Holiday</td>  
+                      <td style= "width:200px">Closed</td>  
                   </tr>
                   <tr style="height: 15px;"/>
                   <tr>
@@ -178,9 +216,9 @@
                         </div>
                       </td>  
                       <td>
-                        <input type="checkbox" class="form-control" name="holiday[2]" value="1" style= "width:20px">
+                        <input type="checkbox" {if ($wed_holiday == '1')}checked{/if} class="form-control" name="holiday[2]" value="1" style= "width:20px">
                       </td> 
-                      <td style= "width:200px">Holiday</td>                     
+                      <td style= "width:200px">Closed</td>                     
                   </tr>
                   <tr style="height: 15px;"/>
                   <tr>
@@ -200,9 +238,9 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" class="form-control" name="holiday[3]" value="1" style= "width:20px">
+                        <input type="checkbox" {if ($thur_holiday == '1')}checked{/if} class="form-control" name="holiday[3]" value="1" style= "width:20px">
                       </td> 
-                      <td style= "width:200px">Holiday</td>                      
+                      <td style= "width:200px">Closed</td>                      
                   </tr>
                   <tr style="height: 15px;"/>
                   <tr>
@@ -222,9 +260,9 @@
                         </div>
                       </td>                        
                       <td>
-                        <input type="checkbox" class="form-control" name="holiday[4]" value="1" style= "width:20px">
+                        <input type="checkbox" {if ($fri_holiday == '1')}checked{/if} class="form-control" name="holiday[4]" value="1" style= "width:20px">
                       </td> 
-                      <td style= "width:200px">Holiday</td> 
+                      <td style= "width:200px">Closed</td> 
                   </tr>
                   <tr style="height: 15px;"/>
                   <tr>
@@ -244,9 +282,9 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" class="form-control" name="holiday[5]" value="1" style= "width:20px">
+                        <input type="checkbox" {if ($sat_holiday == '1')}checked{/if} class="form-control" name="holiday[5]" value="1" style= "width:20px">
                       </td> 
-                      <td style= "width:200px">Holiday</td>                        
+                      <td style= "width:200px">Closed</td>                        
                   </tr>
                   <tr style="height: 15px;"/>
                   <tr>
@@ -266,9 +304,9 @@
                         </div>
                       </td> 
                       <td>
-                        <input type="checkbox" class="form-control" name="holiday[6]" value="1" style= "width:20px">
+                        <input type="checkbox" {if ($sun_holiday == '1')}checked{/if} class="form-control" name="holiday[6]" value="1" style= "width:20px">
                       </td> 
-                      <td style= "width:200px">Holiday</td>                        
+                      <td style= "width:200px">Closed</td>                        
                   </tr>
                   <tr style="height: 15px;"/>
                   <tr style="height: 15px;"/>
