--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -12,7 +12,7 @@
             
             <div class="row">              
               <div class="col-sm-6">
-                <label for="first_name">First Name user</label>
+                <label for="first_name">First Name</label>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-user"></i></span>
                   <input name="first_name" id="first_name" class="form-control" value="{$scope.profile.first_name}" type="text" required/>
