--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -8,6 +8,7 @@
             <input type="hidden" name="user_id" value="{$scope.user.user_id}" />
             <input type="hidden" name="site_id" value="{$site.id}" />
             <input type="hidden" name="page"  value="profile" />
+            <input type="hidden" name="artist" value="1" />
             <input hidden="1" name="next_tab" type="hidden" value="about">  
             
             <div class="row">              
