--- a/pages/components/_user-profile-edit-artist.html
+++ b/pages/components/_user-profile-edit-artist.html
@@ -1,5 +1,8 @@
                   {$profile = $scope.profile}
-                    <form id="user_overview_form" class="ajax-submit autosave"  data-handler="save" data-toggle="validator">
+                  {$awards = json_decode($profile.awards, TRUE)}
+                  {$counts= count($awards['year'])}
+                  
+                    <form id="user_overview_form" class="ajax-submit"  data-handler="save-cv" data-toggle="validator">
                       <input type="hidden" name="obj_type" value="user_profile" />
                       <input type="hidden" name="id"  value="{$scope.profile.profile_id}" />
                       <input type="hidden" name="user_id" value="{$scope.profile.user_id}" />
@@ -21,5 +24,52 @@
                       <textarea name="press" class="summernote form-control" placeholder="List of press mentions">{$scope.profile.press}</textarea>
                     </div>
 
+                    <div class="form-group form-group-icon-left">
+                      <label>Awards</label>
+                      <div id="wrapper">
+                        <table cellspacing="2">
+                          {$i = 0}
+                          {while ($i < $counts)}       
+                            <tr>
+                              <td width="10%"><input type="text" class="form-control" name="awards[year][]" value="{$awards['year'][$i]}" maxlength="100" placeholder="Year"></td>
+                              <td width="2%"></td>
+                              <td width="10%"><input type="text" class="form-control" name="awards[month][]" value="{$awards['month'][$i]}" maxlength="100" placeholder="Month"></td>
+                              <td width="2%"></td>
+                              <td width="25%"><input type="text" class="form-control" name="awards[award][]" value="{$awards['award'][$i]}" maxlength="100" ></td>
+                              <td width="5%"></td>
+                              <td ><button type="button" class="btn btn-primary add">ADD</button></td>
+                            </tr>
+                            <tr style="height: 15px;"/>
+                            {$i= $i+1} 
+                          {/while}
+                        </table>  
+                      </div>                
+                    </div>
+
                     <input type="submit" class="btn btn-primary" value="Save">
                     <div class="gap gap-small"></div>
+
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    var max_fields = 10; //maximum input boxes allowed
+    var wrapper = $("#wrapper"); //Fields wrapper
+    var add = $(".add"); //Add button ID
+
+    var x = 1; //initlal text box count
+    $(add).click(function(e){ //on add input button click
+      e.preventDefault();
+      if(x < max_fields){ //max input box allowed
+        x++; //text box increment
+        $(wrapper).append('<div id="newadd"><table cellspacing="2"><tr><td width="10%"><input type="text" class="form-control" name="awards[year][]" maxlength="100" placeholder="Year"></td><td width="2%"></td><td width="10%"><input type="text" class="form-control" name="awards[month][]" maxlength="100" placeholder="Month"></td><td width="2%"></td><td width="25%"><input type="text" class="form-control" name="awards[award][]" maxlength="100" ></td><td width="5%"></td><td ><button type="button" class="btn btn-danger remove">x</button></td></td></tr><tr style="height: 15px;"/></table></div>'); //add input box
+      }
+    });
+
+    //Remove button ID
+    
+     $('#wrapper').on('click','.remove', function(e){ //user click on remove field
+      $('#newadd').remove(); 
+       x--; 
+    });
+  });
+</script>     
